--- a/.github/workflows/Adar_best_workflow.yml
+++ b/.github/workflows/Adar_best_workflow.yml
@@ -1,36 +1,43 @@
-# This is a basic workflow to help you get started with Actions
+name: Commit Message Check
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  validate-commit-messages:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      #shell commends 
+      - name: Validate Commit Messages
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+               # Get the commit messages in the PR
+               commits=$(git log origin/main..HEAD --pretty=format:"%s")
+               echo "Validating the following commit messages:"
+               echo "$commits"
+               
+               # Define silly or unacceptable patterns
+               invalid_patterns=("fix stuff" "fix things" "stuff" "things" "it works" "changes" "minor changes" "update" "quick fix" "debugging" "temp" "asdf" "qwerty" "foobar" "blah" "blah blah" "random" "whatever" "misc" "test" "tests" "test commit" "trying something" "checking" "experiment" "trial" "wip" "work in progress" "incomplete" "placeholder" "draft" "todo" "1234" "5678" "9999" "0000" "1 2 3" ":)" ":(" "🔥" "💩" "¯\\_(ツ)_/¯" "fixed a bug" "fixed an issue" "some fixes" "some updates" "various updates" "final changes" "last try" "done" "oops" "typo" "small fix" "fix" "update" "add" "delete" "remove")
+               
+               for commit in $commits; do
+               echo "Checking commit: $commit"
+               
+               if [[ ${#commit} -lt 10 ]]; then
+               echo "❌ Commit message is too short: $commit"
+               exit 1
+               fi
+               
+               for pattern in "${invalid_patterns[@]}"; do
+               if [[ "$commit" == *"$pattern"* ]]; then
+               echo "❌ Commit message contains prohibited pattern '$pattern': $commit"
+               exit 1
+               fi
+               done
+               done
+               
+               echo "✅ All commit messages are valid!"
+
